--- a/package.json
+++ b/package.json
@@ -19,7 +19,17 @@
   "devDependencies": {
     "@types/node": "^14.14.34",
     "@types/react": "^17.0.3",
+    "husky": "=4",
+    "lint-staged": ">=10",
     "prettier": "2.2.1",
     "typescript": "^4.2.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,css,md}": "prettier --write"
   }
 }
